feat: add integration infovist
